--- a/Rag/.chainlit/config.toml
+++ b/Rag/.chainlit/config.toml
@@ -41,7 +41,7 @@ name = "PaperBot"
 show_readme_as_default = true
 
 # Description of the app and chatbot. This is used for HTML tags.
-# description = ""
+# description = "Users can summarise or query from their uploaded pdf research papers"
 
 # Large size content are by default collapsed for a cleaner ui
 default_collapse_content = true
@@ -53,7 +53,7 @@ default_expand_messages = false
 hide_cot = false
 
 # Link to your github repo. This will add a github button in the UI's header.
-# github = ""
+github = "https://github.com/ngoinhaoto/SummariseResearchPaperUsingLLM"
 
 # Specify a CSS file that can be used to customize the user interface.
 # The CSS file can be served from the public directory or via an external link.
