--- a/Rag/.chainlit/config.toml
+++ b/Rag/.chainlit/config.toml
@@ -57,28 +57,16 @@ github = "https://github.com/ngoinhaoto/SummariseResearchPaperUsingLLM"
 
 # Specify a CSS file that can be used to customize the user interface.
 # The CSS file can be served from the public directory or via an external link.
-# custom_css = "/public/test.css"
+custom_css = "/public/style.css"
 
-# Override default MUI light theme. (Check theme.ts)
-[UI.theme.light]
-    #background = "#FAFAFA"
-    #paper = "#FFFFFF"
-
-    [UI.theme.light.primary]
-        #main = "#F80061"
-        #dark = "#980039"
-        #light = "#FFE7EB"
-
-# Override default MUI dark theme. (Check theme.ts)
 [UI.theme.dark]
-    #background = "#FAFAFA"
-    #paper = "#FFFFFF"
+    background = "#00000"
+    paper = "#00000"
 
     [UI.theme.dark.primary]
-        #main = "#F80061"
-        #dark = "#980039"
-        #light = "#FFE7EB"
-
+        main = "#A80061"
+        dark = "#380039"
+        light = "#FFE7EB"
 
 [meta]
 generated_by = "0.7.700"
