--- a/Rag/.env
+++ b/Rag/.env
@@ -1,3 +1,3 @@
-OPENAI_API_KEY = "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"
-HUGGINGFACEHUB_API_TOKEN= "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"
+OPENAI_API_KEY = "<YOUR KEY IS HERE :)))))>"
+HUGGINGFACEHUB_API_TOKEN= "<YOUR KEY IS HERE :)))))>"
 
