--- a/Rag/.env
+++ b/Rag/.env
@@ -1,3 +1,2 @@
-OPENAI_API_KEY = "<YOUR KEY IS HERE :)))))>"
-HUGGINGFACEHUB_API_TOKEN= "<YOUR KEY IS HERE :)))))>"
-
+OPENAI_API_KEY = "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"
+HUGGINGFACEHUB_API_TOKEN= "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"
