--- a/Rag/.env
+++ b/Rag/.env
@@ -1,2 +1,2 @@
-OPENAI_API_KEY = "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"
-HUGGINGFACEHUB_API_TOKEN= "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"
+OPENAI_API_KEY = "<ALL TOKEN>"
+HUGGINGFACEHUB_API_TOKEN= "<ALL TOKEN>"
